--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -67,7 +67,7 @@
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Frame>
-                <Button Text="Avançar"></Button>
+                <Button Text="Avançar" Clicked="Button_clicked"></Button>
                 
             </VerticalStackLayout>
         </Frame>
