--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -2,11 +2,52 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
-             Title="HospedagemContratada">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="HospedagemContratada"
+             NavigationPage.HasNavigationBar="false"
+             BackgroundColor="{StaticResource Gray900}">
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+        <Label HorizontalTextAlignment="Center" 
+               Text="Suíte Super Luxo" 
+               FontSize="40" 
+               TextColor="{StaticResource Primary}"
+               />
+        <Frame Margin="10">
+         <HorizontalStackLayout>
+            <HorizontalStackLayout>
+                    <Label Text="Adultos: "/>
+                    <Label Text="1" 
+                           TextColor="{StaticResource PrimaryDark}"/>
+                </HorizontalStackLayout>
+
+            <HorizontalStackLayout>
+                    <Label Text="Crianças: "/>
+                    <Label Text="0" 
+                           TextColor="{StaticResource PrimaryDark}"/>
+                </HorizontalStackLayout>
+         </HorizontalStackLayout>
+            
+        </Frame>
+        <Frame Margin="10">
+            <Grid ColumnDefinitions="*,*,*"
+                  RowDefinitions="Auto, Auto, Auto, *">
+                <Label Grid.Row="0" Grid.Column="0" Text="Check-in: "/>
+                <Label Grid.Row="0" Grid.Column="1" Text="Check-out: "/>
+                <Label Grid.Row="0" Grid.Column="2" Text="Estadia: "/>
+
+                <Label Grid.Row="1" Grid.Column="0" Text="12/11/2025"/>
+                <Label Grid.Row="1" Grid.Column="1" Text="13/11/2025"/>
+                <Label Grid.Row="1" Grid.Column="2" Text="1"/>
+
+
+                <Label Text="Valor Total:" Grid.Row="4" Grid.Column="0"/>
+                <Label Text="R$ 110,00" Grid.Row="4" Grid.Column="1"/>
+                
+            </Grid>
+
+
+        </Frame>
+     
+
+        <Button Margin="10" Text="Ir para o inicio" Clicked="Button_Clicked_2"    />
     </VerticalStackLayout>
 </ContentPage>
