--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -6,7 +6,7 @@
              NavigationPage.HasNavigationBar="False"
              BackgroundColor="{StaticResource Gray900}">
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
-                         Padding="10">
+        Padding="10">
         <Label 
             Text="Cálculo da Diária"
             FontSize="46"
@@ -49,14 +49,17 @@
                 </Grid>
                 <Label Text="Escolha uma suíte"/>
                 <Picker x:Name="Pck_quarto"
-                        Title="Selecione sua acomodação"/>
+                        Title="Selecione sua acomodação"
+                        ItemDisplayBinding="{Binding Descricao}"/>
 
                 <Frame Padding="10" Margin="10" BorderColor="{StaticResource Gray500}">
                     <VerticalStackLayout>
                         <Label Text="Perído da Estadia"/>
                         <HorizontalStackLayout>
                         <Label Text="Check-in:" />
-                            <DatePicker x:Name="dtpck_checkin" Format="dd/MM/yyyy"/>
+                            <DatePicker x:Name="dtpck_checkin" 
+                                        DateSelected="dtpck_checkin_DateSelected"
+                                        Format="dd/MM/yyyy"/>
                             
                         </HorizontalStackLayout>
 
@@ -67,9 +70,16 @@
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Frame>
-                <Button Text="Avançar" Clicked="Button_clicked"></Button>
-                
+                <Button Margin="10" Text="Saiba mais sobre o projeto" Clicked="Button_Clicked_1"/>
+                <Button Text="Avançar" Clicked="Button_Clicked"/>
+
+
+
+
+
             </VerticalStackLayout>
         </Frame>
+
+
     </VerticalStackLayout>
 </ContentPage>
